# OptimizationSeminar

./: .gitignore  CMakeLists.txt  README.md
Chapter3/: CMakeLists.txt  example3-7.cpp  main.cpp
Chapter4/: BFGS.cpp  CMakeLists.txt  NewtonMethod.cpp  gradient_descent.cpp  line_search.cpp  main.cpp  plotter.py
Chapter4/src/: CMakeLists.txt
Chapter5/: CMakeLists.txt  example5-2.cpp  example5-3.cpp  example5-4.cpp
include/: LineSearch.hpp  NewtonMethod.hpp  NonlinearEquationSolver.hpp  SearchDirection.hpp  problem.hpp
src/: CMakeLists.txt  LineSearch.cpp  NewtonMethod.cpp  NonlinearEquationSolver.cpp
